2011-03-28  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Darin Adler.

        http streams don't always display video with AVFoundation backend
        https://bugs.webkit.org/show_bug.cgi?id=57203

        No new tests, we don't currently have tests for http live streams. Changes verified manually.

        * platform/graphics/MediaPlayer.cpp:
        (WebCore::MediaPlayer::MediaPlayer): Initialize m_shouldPrepareToRender.
        (WebCore::MediaPlayer::loadWithNextMediaEngine): Call prepareForRendering on new engine
            if m_shouldPrepareToRender is set.
        (WebCore::MediaPlayer::prepareForRendering): Set m_shouldPrepareToRender.
        * platform/graphics/MediaPlayer.h:

        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
        (WebCore::MediaPlayerPrivateAVFoundation::isReadyForVideoSetup): Don't return true until
            m_isAllowedToRender has been set.
        (WebCore::MediaPlayerPrivateAVFoundation::prepareForRendering): Always call setUpVideoRendering,
            it has logic to figure out when setup is required.
        (WebCore::MediaPlayerPrivateAVFoundation::updateStates): Call setUpVideoRendering when we aren't
            using the preferred rendering mode because if we get a file's metadata between the
            time supportsAcceleratedRendering() and paint() are called, we will allocate a software
            renderer even when we prefer a layer backed renderer.
        (WebCore::MediaPlayerPrivateAVFoundation::movieLoadType): Return "unknown" until we have metadata.

        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationObjC.h:
        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationObjC.mm:
        (WebCore::MediaPlayerPrivateAVFoundationObjC::cancelLoad): Use itemKVOProperties() instead of
            an explicit list of key path names.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayerForURL): Ditto.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::beginLoadingMetadata): metadataKeyNames renamed
            to assetMetadataKeyNames, return an NSArray instead of a CFArrayRef since that is what the
            callers need.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::platformDuration): Return the duration of the
            player item, not the asset, because AVAsset.duration always returns an indefinite time
            for all streaming files.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::assetStatus): metadataKeyNames renamed
            to assetMetadataKeyNames.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::paintCurrentFrameInContext): Do nothing until
            metadata is available.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::paint): Ditto.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::tracksChanged): Split size calculation logic off
            into sizeChanged().
        (WebCore::MediaPlayerPrivateAVFoundationObjC::sizeChanged): New. Use AVPlayerItem.presentationSize
            until tracks is non-NULL so we have a size as early as possible.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::assetMetadataKeyNames): Renamed from metadataKeyNames.
        (WebCore::MediaPlayerPrivateAVFoundationObjC::itemKVOProperties): New, return an array of
            KVO observable properties.
        (-[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:]): Respond to
            presentationSize change.



Canonical link: https://commits.webkit.org/71967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82165 268f45cc-cd09-0410-ab3c-d52691b4dbfc