Source/WebCore/platform/graphics/MediaPlayer.h
@@ -319,6 +319,7 @@ private:
     bool m_muted;
     bool m_preservesPitch;
     bool m_privateBrowsing;
+    bool m_shouldPrepareToRender;
 #if ENABLE(PLUGIN_PROXY_FOR_VIDEO)
     WebMediaPlayerProxy* m_playerProxy;    // not owned or used, passed to m_private
 #endif
